# wdict

./: .gitignore  AGENTS.md  CMakeLists.txt  LRU.c  LRU.h  README.md  TODO.md  arena.c  arena.h  build.bat  build.ps1  cdwrite.h  cmd.c  cmd.h  dict.c  dict.h  fuzzy.c  fuzzy.h  glyph_cache.c  glyph_cache.h  lib.h  main.c  ocr.c  ocr.h  overlay_dcomp.h  palette.h  panel.c  panel.h  pch.c  pch.h  renderer.c  renderer.h  resource.rc  search.c  search.h  shader.hlsl  shortcut.c  shortcut.h  slice.c  slice.h  (+11 more)
data/: dict.bin.zstd
scripts/: build_dict.py  build_dict_from_stardict.py  compress_dict.py  diagnose_def_search.py  extract_pos_tags.py  img2ico.py  verify_dict_blob.py
